# Prim_KPI

./: .gitignore  README.md  pyproject.toml  run.bat  setup.bat
pharma-sales-incentive-system/: requirements.txt
pharma-sales-incentive-system/config/: kpi_weights.json  product_groups.json  regions.json
pharma-sales-incentive-system/data/sample/: Sample_BrickST.xlsx  Sample_STBM.xlsx  Sample_Scorecard.xlsx  Sample_SellOut.xlsx  Sample_Target.xlsx  Sample_Ziyaret.xlsx
pharma-sales-incentive-system/docs/: GITHUB_UPLOAD.md  SECURITY.md  data_dictionary.md
pharma-sales-incentive-system/src/: __init__.py  data_loader.py  incentive_calculator.py  main.py  report_generator.py
pharma-sales-incentive-system/src/ui/: __init__.py
pharma-sales-incentive-system/tests/: __init__.py  test_calculator.py
