[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharma-sales-incentive-system"
version = "1.0.0"
description = "İlaç sektörü için saha satış yönetimi ve prim hesaplama sistemi"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Emir"}
]
keywords = ["pharma", "sales", "incentive", "crm", "flet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "flet>=0.21.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
pharma-sales = "src.main:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/pharma-sales-incentive-system"
Documentation = "https://github.com/YOUR_USERNAME/pharma-sales-incentive-system/docs"
Repository = "https://github.com/YOUR_USERNAME/pharma-sales-incentive-system"
Issues = "https://github.com/YOUR_USERNAME/pharma-sales-incentive-system/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
)/
'''

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "venv", ".venv", "build", "dist"]
ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
